Add new notebooks form modal

--- a/app/assets/stylesheets/api/notebooks.css
+++ b/app/assets/stylesheets/api/notebooks.css
@@ -234,8 +234,13 @@
 }
 
 .close-x {
-  margin-right: auto;
+  margin-left: auto;
   cursor: pointer;
+}
+
+.close-x:hover {
+  opacity: 0.5;
+  transition: all 1s ease-out;
 }
 
 .new-notebook-form-input {
