--- a/app/assets/stylesheets/api/notebooks.css
+++ b/app/assets/stylesheets/api/notebooks.css
@@ -64,21 +64,21 @@
   line-height: 35px;
 }
 
-.notebooks-index-item a:hover {
+.notebooks-index-item div:hover {
   background-color: #eeeeee;
 }
 
-.notebooks-index-item a {
+.notebooks-index-item-hover {
   display: flex;
 }
 
-.notebooks-index-item a span:nth-child(3) { flex-basis: 40%; }
-.notebooks-index-item a span:nth-child(4) { flex-basis: 15%; }
-.notebooks-index-item a span:nth-child(5) { flex-basis: 15%; }
-.notebooks-index-item a span:nth-child(6) { flex-basis: 15%; }
-.notebooks-index-item a span:nth-child(7) { flex-basis: 15%; }
+.notebooks-index-item-hover span:nth-child(3) { flex-basis: 40%; }
+.notebooks-index-item-hover span:nth-child(4) { flex-basis: 15%; }
+.notebooks-index-item-hover span:nth-child(5) { flex-basis: 20%; }
+.notebooks-index-item-hover span:nth-child(6) { flex-basis: 15%; }
+.notebooks-index-item-hover span:nth-child(7) { flex-basis: 10%; }
 
-.notebooks-index-item a span:hover {
+.notebooks-index-item span:hover {
   text-decoration: underline;
 }
 
@@ -201,6 +201,13 @@
     letter-spacing: 0;
 }
 
+.white-cancel-button:hover {
+  border: 1px solid #c3c3c3;
+  background: Transparent;
+  color: #999;
+  transition: all 0.1s ease-out;
+}
+
 .white-new-notebook-continue-button {
   cursor: default;
     border: none;
@@ -229,8 +236,9 @@
 }
 
 .new-notebbook-form-text {
-  margin: 10px 0 10px 0;
+  margin: 10px 0 20px 0;
   font-size: 12px;
+  color: #777;
 }
 
 .close-x {
@@ -246,11 +254,46 @@
 .new-notebook-form-input {
   color: #333333;
   border: 1px solid #e6e6e6;
-  padding: 12px 16px;
+  padding: 6px 8px;
   border-radius: 6px;
-  margin: 4px;
+  margin: 0;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   font-size: 14px;
-  line-height: 1.1875;
+  /* line-height: 1.1875; */
+  width: 95%;
+  background-color: transparent;
+  outline: none;
+  z-index: 1;
+}
+
+.new-notebook-form-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  padding-top: 5px;
+  /* padding: 10px 25px 0 0; */
+  border-top: 1px solid #ededed;
+}
+/* 
+.test-input {
+  position: relative;
+    overflow: hidden;
+    border: 1px solid #e1e1e1;
+    border-radius: 5px;
+    height: 40px;
+    background: rgba(255, 255, 255, .7);
+    width: 95%;
+    padding: 0 8px;
+    cursor: text;
+} */
+
+.new-notebook-form-title-input {
+  margin-top: 10px;
+}
+
+.new-notebook-form-title-label {
+  color: #7a8083;
+  font-size: 12px;
+  font-weight: 600;
 }
