--- a/app/assets/stylesheets/css_reset.css
+++ b/app/assets/stylesheets/css_reset.css
@@ -14,6 +14,7 @@ span, article, footer, time, small {
   vertical-align: inherit;
   box-sizing: inherit;
   background: transparent;
+  text-rendering: optimizeLegibility;
 }
 
 ul {
