--- a/app/assets/stylesheets/api/auth_forms.css
+++ b/app/assets/stylesheets/api/auth_forms.css
@@ -143,16 +143,18 @@
   overflow: hidden;
   font-size: 16px;
   transform: scale(0);
-  transition: opacity 1s ease, transform 1s ease;
+  transition: opacity 1s ease, transform 1s all;
 }
 
 .loaded {
   opacity: 1;
   max-height: 100px;
   padding: 10px 20px;
-  transform: scale(2);
+  transform: scale(1);
   background-color: white;
   overflow: visible;
   transition: opacity 1s ease, transform 1s ease;
 }
+
+
 
