--- a/app/assets/stylesheets/api/tags.css
+++ b/app/assets/stylesheets/api/tags.css
@@ -3,7 +3,7 @@
   font-size: 12px;
   line-height: 24px;
   padding-left: 5px;
-  width: 100px;
+  width: 120px;
   display: flex;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .arrow-facing-down {
-    stroke: #a6a6a6;
+  stroke: #a6a6a6;
 }
 
 .tags-list-header-new-tag-button {
@@ -60,4 +60,13 @@
 
 .tags-list-header-new-tag-label {
   margin-left: 2px;
+}
+
+.cls-1 {
+  fill: #4c4c4c;
+  height: 20px;
+}
+
+.notebook-icon-svg {
+  height: 20px;
 }
